src/objects/fc_csc__Process_Payment__c.object
<CustomObject>
    <description>Skeleton object used in FC_ProcessPayment.page</description>
    <fields>
        <fullName>fc_csc__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_Left__c</fullName>
        <label>Amount Left</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Applied_Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Bank_Account__c</fullName>
        <label>Bank Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BNY</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__DepositId__c</fullName>
        <label>Deposit Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__LockboxId__c</fullName>
        <label>Lockbox Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Method_Id__c</fullName>
        <label>Payment Method Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Zuora_Account_Id__c</fullName>
        <label>Zuora Account Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Process Payment</label>
    <nameField>
        <label>Process a Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>